--- a/doc/andand.textile
+++ b/doc/andand.textile
@@ -1,7 +1,5 @@
 h1. Andand
 
-h2. What
-
 _Andand_ lets us write:
 
 <pre syntax="ruby">
@@ -24,8 +22,6 @@ entry.at('description') && entry.at('description').inner_text
 entry.at('description').andand.inner_text
 </pre>Why indeed!
 
-h2. The basics
-
 h3. The idea behind Andand
 
 Ruby programmers are familiar with the two _guarded assignment_ operators @&&=@ and @||=@. The typical use for them is when you have a variable that might be nil. For example:
@@ -43,11 +39,19 @@ Andand let&rsquo;s us write:
 
 <pre syntax="ruby">
 @phone = Location.find(:first, ...elided... ).andand.phone
-</pre>And it does the same thing by rewriting the code into ordinary Ruby. Because you accept any method using Ruby’s method invocation syntax, Andand also lets us write methods with parameters and/or blocks:
+</pre>And it does the same thing by rewriting the code into ordinary Ruby:
+
+<pre syntax="ruby">
+@phone = (__TEMP721347__ = Location.find(:first, ...elided... ) and __TEMP721347__.phone)
+</pre>TBecause you accept any method using Ruby’s method invocation syntax, Andand also lets us write methods with parameters and/or blocks:
 
 <pre syntax="ruby">
 list_of_lists.detect { ...elided... }.andand.inject(42) { ...elided ... }
-</pre>Object#andand emphasizes syntactic regularity: the goal was to make an @&&.@ operation that worked like @&&=@. @&&=@ looks just like normal assignment, you can use any expression on the RHS, only the semantics are different. The andand method also works just like a normal method invocation, only the semantics are modified.
+</pre>And it is again rewritten into ordinary Ruby for you:
+
+<pre syntax="ruby">
+(__TEMP721347__ = list_of_lists.detect { ...elided... } and __TEMP721347__.inject(42) { ...elided ... })
+</pre>_Andand_ emphasizes syntactic regularity: the goal was to make an @&&.@ operation that worked like @&&=@. @&&=@ looks just like normal assignment, you can use any expression on the RHS, only the semantics are different. The andand method also works just like a normal method invocation, only the semantics are modified.
 
 And there's a third form, a little like the @and@ keyword and the @return@ method's illegitimate love child:
 
@@ -57,12 +61,22 @@ Location.find(:first, ...elided... ).andand do |phone|
   directory << phone
   phone.area_code
 end
+</pre>Is rewritten as:
+
+<pre syntax="ruby">
+(phone = Location.find(:first, ...elided... ) and begin
+  phone.call
+  directory << phone
+  phone.area_code
+end)
 </pre>
 
 h2. A little more background
 
-"Object#andand & Object#me in Ruby":http://weblog.raganwald.com/2008/01/objectandand-objectme-in-ruby.html explains the original motivations, as well as providing links to similar implementations you may want to consider. A few people have pointed out that Object#andand is similar to Haskell's Maybe monad. "The Maybe Monad in Ruby":http://blog.pretheory.com/arch/2008/02/the_maybe_monad_in_ruby.php is a good introduction for Ruby programmers.
+"Object#andand & Object#me in Ruby":http://weblog.raganwald.com/2008/01/objectandand-objectme-in-ruby.html explains the original motivations, as well as providing links to similar implementations you may want to consider. A few people have pointed out that _Andand_ is similar to Haskell's Maybe monad. "The Maybe Monad in Ruby":http://blog.pretheory.com/arch/2008/02/the_maybe_monad_in_ruby.php is a good introduction for Ruby programmers.
 
-h2. Shout Out
+"Andand even more":http://github.com/raganwald/homoiconic/tree/master/2009-01-05/andand_even_more.md is an interesting read.
+
+h3. Shout Out
 
 "Mobile Commons":http://mcommons.com/. Huge.
